k8s/infra/network/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.2.222
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-kube-gateway
      hostname: "*.kube.ravil.space"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-ravilspace
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-home-gateway
      hostname: "*.home.ravil.space"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-ravilspace
      allowedRoutes:
        namespaces:
          from: All
