k8s/infra/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.220
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.kube.ravil.space"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-ravilspace
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: kube.ravil.space
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-ravilspace
      allowedRoutes:
        namespaces:
          from: All
